<resources>
    <string name="app_name" colore="">WHITE-GYM</string>
    <string name="reg_title">INSERT YOUR DATA</string>
    <string name="signup">Sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="lastname">Last name</string>
    <string name="firstname">First name</string>
    <string name="fullname">Full name</string>
    <string name="errorsignup">Registration error</string>
    <string name="inforequired">Info required</string>
    <string name="HeaderList">Header</string>
    <string name="creaScheda">Create Card</string>
    <string name="eliminaScheda">Delete Cards</string>
    <string name="register">Register</string>
    <string name="menu_info">Burn</string>
    <string name="description">Description:</string>
    <string name="current">Currently on Mode:</string>
    <string name="already_registered_log_in">Login</string>
    <string name="logout">Logout</string>
    <string name="login">LOGIN</string>
    <string name="new_here_create_account">Create Account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="user">User</string>
    <string name="menu_cards">Cards</string>
    <string name="selectSource">Select source</string>
    <string name="phone">Phone Number</string>
    <string name="my_cards">Your Cards</string>
    <string name="exercise_list">EXERCISES LIST</string>
    <string name="user_list">USERS LIST</string>
    <string name="exercise_name">Name</string>
    <string name="exercise_diff">Difficulty</string>
    <string name="exercise_desc">Description</string>
    <string name="menu_users">Users</string>
    <string name="name_ex">Name</string>
    <string name="desc_ex">Description</string>
    <string name="cal_ex">Calories (number)</string>
    <string name="diff_ex">Difficulty</string>
    <string name="rename_card">Rename Card</string>
    <string name="menu_ex">Exercises</string>
    <string name="multi_ex">multi_ex</string>
    <string name="name_item_choose" />
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="emptyPhoneNumber">Phone Number</string>
    <string name="user_surname">Surname</string>
    <string name="user_name">Name</string>
    <string name="image">Image</string>
    <string name="info">Siamo 3 studenti del III anno di Ingegneria Informatica e dell Automazione. Tale progetto è volto a sviluppare un applicazione mobile per Android riguardate una palestra organizzando le 4 settimane di allenamento perfette per ogni persona che voglia approcciarsi all allenamento fisico. L applicazione è poi strettamente legata ai meccanismi e funzionamenti del sistema di Databasing FIREBASE.</string>
</resources>
