<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">



    <ImageView
        android:id="@+id/user_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:clickable="true"
        android:foreground="@drawable/rounded_fg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/user_firstname"
        app:layout_constraintVertical_bias="0.07"
        app:srcCompat="@drawable/ic_account" />

    <TextView
        android:id="@+id/user_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/firstname"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/user_image"
        app:layout_constraintBottom_toTopOf="@+id/user_mfirstname"
        />

    <TextView
        android:id="@+id/user_mfirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text=""
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user_lastname"
        app:layout_constraintTop_toBottomOf="@+id/user_image"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/user_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/lastname"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/user_mlastname"
        app:layout_constraintTop_toBottomOf="@id/user_mfirstname"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/user_mlastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text=""
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/user_lastname"
        app:layout_constraintBottom_toTopOf="@+id/user_phone"
        />

    <TextView
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/phone"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/user_mlastname"
        app:layout_constraintBottom_toTopOf="@+id/user_mphone"
        />

    <TextView
        android:id="@+id/user_mphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text=""
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/user_phone"
        app:layout_constraintBottom_toTopOf="@+id/user_email"
    />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/user_memail"
        app:layout_constraintTop_toBottomOf="@+id/user_mphone"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/user_memail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text=""
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>